--- a/src/app/entry/entryLanding/entryLanding.html
+++ b/src/app/entry/entryLanding/entryLanding.html
@@ -1,12 +1,15 @@
 <div class="entry-container right">
     <entry-nav class="left"></entry-nav>
     <hymn-header></hymn-header>
+    <entry-nav-modal></entry-nav-modal>
 
    <div class="entry-body row">     
         <div class="col-md-6 offset-md-3">
             <div class="card">
                 <div class="card-block">
                     Please select the resource you want to enter from the list to the left.
+                    <br>
+                    Please answer <u>every</u> question to the best of your ability.
                 </div>
             </div>
         </div>
