--- a/src/app/entry/entryResources/entryResources.html
+++ b/src/app/entry/entryResources/entryResources.html
@@ -78,6 +78,9 @@
                       <li [hidden]="!resourceUrl.errors.required">
                           URL is required
                       </li>
+                      <li>
+                          Please follow this format: https://www.google.com
+                      </li>
                   </ul>
                 </div> 
             </div>
@@ -470,12 +473,6 @@
                     <md-radio-button class="block-input" value="no"> No</md-radio-button>
                 </md-radio-group>
             </div>
-
-
-            <!--<div>
-                <a class="btn btn-block btn-primary" (click)=submit()>Submit</a>
-                <a class="btn btn-block btn-link" routerLink="/">Return to home</a>
-            </div>-->
 
             <md-card-actions>
               <button md-raised-button color="primary" type="submit" 
