--- a/src/app/entry/entryPerson/entryPerson.html
+++ b/src/app/entry/entryPerson/entryPerson.html
@@ -11,6 +11,11 @@
                     </md-card-subtitle>
                     <md-card-title><h4 class="card-title">{{content?.fields.title}}</h4></md-card-title>
 
+                    <form name="personForm"
+                    (ngSubmit)="submit()"
+                    #personForm="ngForm"
+                    *ngIf="submission">
+
                     <div class="form-group">
                         <!--<label for="personFname">First Name</label>-->
                         <md-input-container class="full-width">
@@ -20,8 +25,16 @@
                             class="form-control" 
                             [(ngModel)]="submission.data.first_name"
                             name="personFname"
+                            #personFname="ngModel"
                             required/>
                         </md-input-container>
+                        <div class="alert alert-danger" *ngIf="personFname.errors && personFname.touched">
+                            <ul>
+                                <li [hidden]="!personFname.errors.required">
+                                    First name is required
+                                </li>
+                            </ul>
+                        </div>
                     </div>
 
                     <div class="form-group">
@@ -33,8 +46,16 @@
                             class="form-control" 
                             [(ngModel)]="submission.data.last_name"
                             name="personLname"
+                            #personLname="ngModel"
                             required/>
                         </md-input-container>
+                        <div class="alert alert-danger" *ngIf="personLname.errors && personLname.touched">
+                            <ul>
+                                <li [hidden]="!personLname.errors.required">
+                                    Last name is required
+                                </li>
+                            </ul>
+                        </div>
                     </div>
 
                     <div class="form-group">
@@ -47,8 +68,16 @@
                             class="form-control" 
                             [(ngModel)]="submission.data.email"
                             name="personEmail"
+                            #personEmail="ngModel"
                             required/>
                         </md-input-container>
+                        <div class="alert alert-danger" *ngIf="personEmail.errors && personEmail.touched">
+                            <ul>
+                                <li [hidden]="!personEmail.errors.required">
+                                    Email is required
+                                </li>
+                            </ul>
+                        </div>
                     </div>
 
                     <div class="form-group">
@@ -60,8 +89,16 @@
                             class="form-control"
                             [(ngModel)]="submission.data.city" 
                             name="personCity"
+                            #personCity="ngModel"
                             required/>
                         </md-input-container>
+                        <div class="alert alert-danger" *ngIf="personCity.errors && personCity.touched">
+                            <ul>
+                                <li [hidden]="!personCity.errors.required">
+                                    City is required
+                                </li>
+                            </ul>
+                        </div>
                     </div>
 
                     <div class="form-group">
@@ -73,8 +110,16 @@
                             class="form-control" 
                             [(ngModel)]="submission.data.state"
                             name="personState"
+                            #personState="ngModel"
                             required/>
                         </md-input-container>
+                        <div class="alert alert-danger" *ngIf="personState.errors && personState.touched">
+                            <ul>
+                                <li [hidden]="!personState.errors.required">
+                                    State is required
+                                </li>
+                            </ul>
+                        </div>
                     </div>
 
                     <div class="form-group">
@@ -86,8 +131,16 @@
                             class="form-control" 
                             [(ngModel)]="submission.data.country"
                             name="personCountry"
+                            #personCountry="ngModel"
                             required/>
                         </md-input-container>
+                        <div class="alert alert-danger" *ngIf="personCountry.errors && personCountry.touched">
+                            <ul>
+                                <li [hidden]="!personCountry.errors.required">
+                                    Country is required
+                                </li>
+                            </ul>
+                        </div>
                     </div>
 
                     <div class="form-group">
@@ -99,8 +152,19 @@
                             class="form-control" 
                             [(ngModel)]="submission.data.url"
                             name="personUrl"
+                            #personUrl="ngModel"
                             required/>
                         </md-input-container>
+                        <div class="alert alert-danger" *ngIf="personUrl.errors && personUrl.touched">
+                            <ul>
+                                <li [hidden]="!personUrl.errors.required">
+                                    URL is required
+                                </li>
+                                <li>
+                                    Please follow this format: https://www.google.com
+                                </li>
+                            </ul>
+                        </div>
                     </div>
 
                     <div class="form-group">
@@ -112,8 +176,19 @@
                             class="form-control" 
                             [(ngModel)]="submission.data.social_url"
                             name="personSocial"
+                            #personSocial="ngModel"
                             required/>
                         </md-input-container>
+                        <div class="alert alert-danger" *ngIf="personSocial.errors && personSocial.touched">
+                            <ul>
+                                <li [hidden]="!personSocial.errors.required">
+                                    Social media URL is required
+                                </li>
+                                <li>
+                                    Please follow this format: https://www.google.com
+                                </li>
+                            </ul>
+                        </div>
                     </div>
 
                     <div class="form-group">
@@ -125,14 +200,22 @@
                             class="form-control" 
                             [(ngModel)]="submission.data.emphasis"
                             name="personEmphasis"
+                            #personEmphasis="ngModel"
                             required/>
                         </md-input-container>
+                        <div class="alert alert-danger" *ngIf="personEmphasis.errors && personEmphasis.touched">
+                            <ul>
+                                <li [hidden]="!personEmphasis.errors.required">
+                                    Topic/Emphasis is required
+                                </li>
+                            </ul>
+                        </div>
                     </div>                    
 
                     <div class="form-group">
                         <label for="personMember">Are you a Hymn Society Member?</label>
-                        <md-radio-group [(ngModel)]="submission.data.hymn_soc_member">
-                            <md-radio-button class="block-input" name="isMember" value="yes">Yes</md-radio-button>
+                        <md-radio-group [(ngModel)]="submission.data.hymn_soc_member" name="personMember" required>
+                            <md-radio-button class="block-input" name="isMember" value="yes" required>Yes</md-radio-button>
                             <md-radio-button class="block-input"  name="isMember" value="no">No</md-radio-button>
                         </md-radio-group>
                     </div>
@@ -142,42 +225,49 @@
                             <md-checkbox class="block-input"
                                 ng-true-value="true" 
                                 ng-false-value="false"
+                                name="personTopicOne"
                                 [(ngModel)]="submission.data.topics.Contemporary_Song_Band">
                             Contemporary Song/Band
                             </md-checkbox>
                             <md-checkbox class="block-input"
                                 ng-true-value="true" 
                                 ng-false-value="false"
+                                name="personTopicTwo"
                                 [(ngModel)]="submission.data.topics.Traditional_Hymnody">
                             Traditional Hymnody
                             </md-checkbox>
                             <md-checkbox class="block-input"
                                 ng-true-value="true" 
                                 ng-false-value="false"
+                                name="personTopicThree"
                                 [(ngModel)]="submission.data.topics.Musician_Pastor_Relationship_Song_Band">
                             Musician/Pastor Relationship Song/Band
                             </md-checkbox>
                             <md-checkbox class="block-input"
                                 ng-true-value="true" 
                                 ng-false-value="false"
+                                name="personTopicFour"
                                 [(ngModel)]="submission.data.topics.Cantoring">
                             Cantoring
                             </md-checkbox>
                             <md-checkbox class="block-input"
                                 ng-true-value="true" 
                                 ng-false-value="false"
+                                name="personTopicFive"
                                 [(ngModel)]="submission.data.topics.Song_Enlivening">
                             Song Enlivening
                             </md-checkbox>
                             <md-checkbox class="block-input"
                                 ng-true-value="true" 
                                 ng-false-value="false"
+                                name="personTopicSix"
                                 [(ngModel)]="submission.data.topics.Keyboards">
                             Keyboards (piano/organ)
                             </md-checkbox>
                             <md-checkbox class="block-input"
                                 ng-true-value="true" 
                                 ng-false-value="false"
+                                name="personTopicSeven"
                                 [(ngModel)]="submission.data.topics.Worship_Planning">
                             Worship Planning
                             </md-checkbox>
@@ -188,42 +278,49 @@
                             <md-checkbox class="block-input"
                                 ng-true-value="true" 
                                 ng-false-value="false"
+                                name="personEthnicityOne"
                                 [(ngModel)]="submission.data.ethnicities.White"> 
                             White
                             </md-checkbox>
                             <md-checkbox class="block-input"
                                 ng-true-value="true" 
                                 ng-false-value="false"
+                                name="personEthnicityTwo"
                                 [(ngModel)]="submission.data.ethnicities.Black"> 
                             Black
                             </md-checkbox>
                             <md-checkbox class="block-input"
                                 ng-true-value="true" 
                                 ng-false-value="false"
+                                name="personEthnicityThree"
                                 [(ngModel)]="submission.data.ethnicities.Hispanic_Latin_American_Caribbean"> 
                             Hispanic/Latin-American/Caribbean
                             </md-checkbox>
                             <md-checkbox class="block-input"
                                 ng-true-value="true" 
                                 ng-false-value="false"
+                                name="personEthnicityFour"
                                 [(ngModel)]="submission.data.ethnicities.Native_American_Indigenous_Peoples"> 
                             Native American/Indigenous Peoples
                             </md-checkbox>
                             <md-checkbox class="block-input"
                                 ng-true-value="true" 
                                 ng-false-value="false"
+                                name="personEthnicityFive"
                                 [(ngModel)]="submission.data.ethnicities.Asian"> 
                             Asian
                             </md-checkbox>
                             <md-checkbox class="block-input"
                                 ng-true-value="true" 
                                 ng-false-value="false"
+                                name="personEthnicitySix"
                                 [(ngModel)]="submission.data.ethnicities.African"> 
                             African
                             </md-checkbox>
                             <md-checkbox class="block-input"
                                 ng-true-value="true" 
                                 ng-false-value="false"
+                                name="personEthnicitySeven"
                                 [(ngModel)]="submission.data.ethnicities.Middle_Eastern"> 
                             Middle-Eastern
                             </md-checkbox>
@@ -233,42 +330,46 @@
                                     id="resourceTopic" 
                                     class="form-control" 
                                     [(ngModel)]="submission.data.ethnicities.Other"
-                                    name="resourceTopic"
-                                    required
+                                    name="resourceEthnicityOther"
                                     placeholder="Other Ethnicities"/>
                                 </md-input-container>
                         </md-checkbox>
                     </div>
 
                     <div class="form-group">
-                        <label for="personCategories">What types of ensembles are you comfortable working with?</label>
+                        <label for="personEnsemble">What types of ensembles are you comfortable working with?</label>
                             <md-checkbox class="block-input"
                                 ng-true-value="true"
                                 ng-false-value="false"
+                                name="personEnsembleOne"
                                 [(ngModel)]="submission.data.categories.Choir">
-                            Choir
+                                Choir
                             </md-checkbox>
                             <md-checkbox class="block-input"
                                 ng-true-value="true"
                                 ng-false-value="false"
+                                name="personEnsembleTwo"
                                 [(ngModel)]="submission.data.categories.Cantor">
-                            Cantor
+                                Cantor
                             </md-checkbox>
                             <md-checkbox class="block-input"
                                 ng-true-value="true"
                                 ng-false-value="false"
+                                name="personEnsembleThree"
                                 [(ngModel)]="submission.data.categories.Song_Enlivener">
-                            Song-Enlivener
+                                Song-Enlivener
                             </md-checkbox>
                             <md-checkbox class="block-input"
                                 ng-true-value="true"
                                 ng-false-value="false"
+                                name="personEnsembleFour"
                                 [(ngModel)]="submission.data.categories.Solo">
-                            Lead Singer from Band (Solo)
+                                Lead Singer from Band (Solo)
                             </md-checkbox>
                             <md-checkbox class="block-input"
                                 ng-true-value="true"
                                 ng-false-value="false"
+                                name="personEnsembleFive"
                                 [(ngModel)]="submission.data.categories.Lead_Singer_from_Band_with_Other_Vocalists">
                             Lead Singer from Band with Other Vocalists</md-checkbox>
                             <md-checkbox class="block-input" name="other">
@@ -277,17 +378,22 @@
                                 id="resourceTopic" 
                                 class="form-control" 
                                 [(ngModel)]="submission.data.categories.Other"
-                                name="resourceTopic"
-                                required
+                                name="resourceTopicOther"
                                 placeholder="Other Ensemble"/>
                                 </md-input-container>
                             </md-checkbox>
                     </div>
           
-                    <div>
-                        <a class="btn btn-block btn-primary" (click)=submit()>Submit</a>
-                        <a class="btn btn-block btn-link" routerLink="/">Return to home</a>
-                    </div>  
+                    <md-card-actions>
+                        <button md-raised-button color="primary" type="submit" 
+                        [disabled]="personForm.invalid">
+                        Submit
+                        </button>
+                        <button md-button routerLink="/">
+                        Return to home
+                        </button>
+                    </md-card-actions>
+                    </form>  
                     
                 </md-card-content> <!-- end class card-block-->
             </md-card> <!-- end class card -->
