--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -3,7 +3,7 @@
   <hymn-title></hymn-title>
   <main class="main">
       <div class="options">
-        <button md-raised-button color="primary">Help me find resources</button>
+        <button md-raised-button color="primary" (click)=toLogIn()>Enter in resources</button>
         <button md-raised-button>Explore on my own</button> 
       </div>
       
