--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -4,4 +4,13 @@
       The Center for Congregational Song
     </a>
   </p>
+  <button *ngIf="display" md-icon-button [mdMenuTriggerFor]="menu">
+    <md-icon>more_vert</md-icon>
+  </button>
+  <md-menu #menu="mdMenu">
+    <button (click)=logout() md-menu-item>
+      <md-icon>exit_to_app</md-icon>
+      <span>Log Out</span>
+    </button>
+  </md-menu>
 </header>
