fixing small angular error

--- a/src/app/entry/entryResources/entryResources.html
+++ b/src/app/entry/entryResources/entryResources.html
@@ -118,7 +118,7 @@
                     placeholder="Resource Description"
                     id="resourceDescription" 
                     class="form-control" 
-                    [(ngModel)]="submission.data.desc"
+                    [(ngModel)]="submission.data.description"
                     name="resourceDescription"
                     required/>
                 </md-input-container>
