fixing values of checkboxes in resources

--- a/src/app/entry/entryResources/entryResources.html
+++ b/src/app/entry/entryResources/entryResources.html
@@ -40,13 +40,13 @@
             <div class="form-group">
                 <label for="resourceType">Resource Type</label>
                 <md-radio-group [(ngModel)]="submission.data.type" name="radioType">
-                    <md-radio-button class="block-input" name="type" value="book" required> Book</md-radio-button>
-                    <md-radio-button class="block-input" name="type" value="blog"> Blog</md-radio-button>
-                    <md-radio-button class="block-input" name="type" value="podcast"> Podcast</md-radio-button>
-                    <md-radio-button class="block-input" name="type" value="news"> Newsletter/E-News</md-radio-button>
-                    <md-radio-button class="block-input" name="type" value="forum"> Forum</md-radio-button>
-                    <md-radio-button class="block-input" name="type" value="audio"> Audio Track(s)</md-radio-button>
-                    <md-radio-button class="block-input" name="type" value="video"> Video/Visual(s)</md-radio-button>
+                    <md-radio-button class="block-input" name="type" value="Book" required> Book</md-radio-button>
+                    <md-radio-button class="block-input" name="type" value="Blog"> Blog</md-radio-button>
+                    <md-radio-button class="block-input" name="type" value="Podcast"> Podcast</md-radio-button>
+                    <md-radio-button class="block-input" name="type" value="Newsletter/E-News"> Newsletter/E-News</md-radio-button>
+                    <md-radio-button class="block-input" name="type" value="Forum"> Forum</md-radio-button>
+                    <md-radio-button class="block-input" name="type" value="Audio Track(s)"> Audio Track(s)</md-radio-button>
+                    <md-radio-button class="block-input" name="type" value="Video/Visual(s)"> Video/Visual(s)</md-radio-button>
                     <md-radio-button class="block-input" name="type">                                         
                         <md-input-container class="full-width">
                         <input md-input mdInput type="text"
