--- a/src/app/entry/entryResources/entryResources.html
+++ b/src/app/entry/entryResources/entryResources.html
@@ -459,18 +459,18 @@
             <div class="form-group">
                 <label for="resourceIsInvolved">Is a Hymn Society member involved?</label>
                 <md-radio-group name="resourceIsInvolved" [(ngModel)]="submission.data.hymn_soc_member" >
-                    <md-radio-button class="block-input" value="yes" required> Yes</md-radio-button>
-                    <md-radio-button class="block-input" value="no"> No</md-radio-button>
-                    <md-radio-button class="block-input" value="unknown"> Unknown</md-radio-button>
+                    <md-radio-button class="block-input" value="Yes" required> Yes</md-radio-button>
+                    <md-radio-button class="block-input" value="Yo"> No</md-radio-button>
+                    <md-radio-button class="block-input" value="Unknown"> Unknown</md-radio-button>
                 </md-radio-group>
             </div>
 
             <div class="form-group">
                 <label for="resourceFree">Is this resource free?</label>
                 <md-radio-group name="resourceFree" [(ngModel)]="submission.data.is_free" aria-required="">
-                    <md-radio-button class="block-input" value="yes" required> Yes</md-radio-button>
-                    <md-radio-button class="block-input" value="partially"> Partially with paywall</md-radio-button>
-                    <md-radio-button class="block-input" value="no"> No</md-radio-button>
+                    <md-radio-button class="block-input" value="Yes" required> Yes</md-radio-button>
+                    <md-radio-button class="block-input" value="Partially with paywall"> Partially with paywall</md-radio-button>
+                    <md-radio-button class="block-input" value="No"> No</md-radio-button>
                 </md-radio-group>
             </div>
 
