fixing small errors in congregation

--- a/src/app/entry/entryCongregation/entryCongregation.html
+++ b/src/app/entry/entryCongregation/entryCongregation.html
@@ -114,7 +114,7 @@
                                 <md-input-container>
                                 <input md-input mdInput type="text" 
                                 placeholder="Other Country"
-                                [(ngModel)]="countryOtherText"
+                                [(ngModel)]="submission.data.country"
                                 name="otherCountry"/>
                                 </md-input-container>
                             </md-radio-button>
@@ -137,7 +137,7 @@
                                 <md-input-container>
                                 <input md-input mdInput type="text" 
                                 placeholder="Other Denomination/Tradition"
-                                [(ngModel)]="denomOther"
+                                [(ngModel)]="submission.data.denomination"
                                 name="otherDenom"/>
                                 </md-input-container>
                             </md-radio-button>
