value change for orgs

--- a/src/app/entry/entryOrgs/entryOrgs.html
+++ b/src/app/entry/entryOrgs/entryOrgs.html
@@ -85,16 +85,16 @@
                     <div class="form-group">
                         <label for="orgDenomination">Are you related to or a part of a specific denomination or tradition?</label>
                             <md-radio-group [(ngModel)]="submission.data.denomination" name="orgDenomination" required>
-                                <md-radio-button class="block-input" name="denomination" value="multidom" required>Ecumenical/Multi-Denominational</md-radio-button>
-                                <md-radio-button class="block-input" name="denomination" value="nondenom">Non-Denominational</md-radio-button>
-                                <md-radio-button class="block-input" name="denomination" value="catholic">Roman Catholic</md-radio-button>
-                                <md-radio-button class="block-input" name="denomination" value="anglican">Anglican/Episcopal</md-radio-button>
-                                <md-radio-button class="block-input" name="denomination" value="lutheran">Lutheran</md-radio-button>
-                                <md-radio-button class="block-input" name="denomination" value="wesleyan">Wesleyan (United Methodist, AME, etc...)</md-radio-button>
-                                <md-radio-button class="block-input" name="denomination" value="reformed">Reformed (Presbyterian, RCA, etc...)</md-radio-button>
-                                <md-radio-button class="block-input" name="denomination" value="baptist">Baptist/Free-Church</md-radio-button>
-                                <md-radio-button class="block-input" name="denomination" value="baptist">Pentecostal</md-radio-button>
-                                <md-radio-button class="block-input" name="denomination" value="other">
+                                <md-radio-button class="block-input" name="denomination" value="Ecumenical/Multi-Denominational" required>Ecumenical/Multi-Denominational</md-radio-button>
+                                <md-radio-button class="block-input" name="denomination" value="Non-Denominational">Non-Denominational</md-radio-button>
+                                <md-radio-button class="block-input" name="denomination" value="Roman Catholic">Roman Catholic</md-radio-button>
+                                <md-radio-button class="block-input" name="denomination" value="Anglican/Episcopal">Anglican/Episcopal</md-radio-button>
+                                <md-radio-button class="block-input" name="denomination" value="Lutheran">Lutheran</md-radio-button>
+                                <md-radio-button class="block-input" name="denomination" value="Wesleyan (United Methodist, AME, etc...)">Wesleyan (United Methodist, AME, etc...)</md-radio-button>
+                                <md-radio-button class="block-input" name="denomination" value="Reformed (Presbyterian, RCA, etc...)">Reformed (Presbyterian, RCA, etc...)</md-radio-button>
+                                <md-radio-button class="block-input" name="denomination" value="Baptist/Free-Church">Baptist/Free-Church</md-radio-button>
+                                <md-radio-button class="block-input" name="denomination" value="Pentecostal">Pentecostal</md-radio-button>
+                                <md-radio-button class="block-input" name="denomination">
                                     <md-input-container>
                                     <input md-input mdInput type="text" 
                                     placeholder="Other Denomination/Tradition"
